Fix Bug 301663 - after creating a imap account (using assistent) the

folder list is still empty
FIXED-IN: 4.8.5
BUG: 301663
(cherry picked from commit f37a965cb050294bfa9b8c69a06bf527ba997605)

Conflicts:

	mailcommon/foldercollectionmonitor.cpp